login form and add imgs

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,18 @@
-<p>
-  login works!
-</p>
+<section id="login">
+	<div class="loginForm">
+		<img src="./assets/images/logo.png" alt="">
+		<div class="spacer" style="height: 2em;"></div>
+		<form action="#">
+			<p>Please enter your credentials</p>
+			<input type="text" placeholder="Email" class="input">
+			<div class="spacer" style="height: 1em;"></div>
+			<input type="password" placeholder="password" class="input">
+			<div class="spacer" style="height: 1em;"></div>
+			<input type="submit">
+			<div class="spacer" style="height: 1em;"></div>
+			<a href="#">Forgot password?</a>
+		</form>
+		
+
+	</div>
+</section>
