done login page and add bootstrap package

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,26 @@
 <section id="login">
-	<div class="loginForm">
-		<img src="./assets/images/logo.png" alt="">
-		<div class="spacer" style="height: 2em;"></div>
-		<form action="#">
-			<p>Please enter your credentials</p>
-			<input type="text" placeholder="Email" class="input">
-			<div class="spacer" style="height: 1em;"></div>
-			<input type="password" placeholder="password" class="input">
-			<div class="spacer" style="height: 1em;"></div>
-			<input type="submit">
-			<div class="spacer" style="height: 1em;"></div>
-			<a href="#">Forgot password?</a>
-		</form>
-		
-
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-7"></div>
+			<div class="col-md-5">
+				<div class="loginForm" id="polygon">
+					<div class="spacer" style="height: 3em;"></div>
+					<img src="./assets/images/logo.png" alt="">
+					<div class="spacer" style="height: 2em;"></div>
+					<form action="#">
+						<p>Please enter your credentials</p>
+						<input type="text" placeholder="Email" class="input">
+						<div class="spacer" style="height: 1em;"></div>
+						<input type="password" placeholder="Password" class="input">
+						<div class="spacer" style="height: 1em;"></div>
+						<input type="submit" class="submitButton" (click)="buttonClick()">
+						<div class="spacer" style="height: 1em;"></div>
+						<a href="#">Forgot password?</a>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
+	
 </section>
+
