--- a/src/app/login/page1/page1.component.html
+++ b/src/app/login/page1/page1.component.html
@@ -1,3 +1,16 @@
-<p>
-  page1 works!
-</p>
+<section id="page1">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="infoContent">
+					something
+				</div>
+			</div>
+			<div class="col-md-8">
+				<div class="pageContent">
+					information
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
