--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,4 +9,38 @@ section#login{
 
 .loginForm{
 	margin-right: 20px;
+	width: 100%;
+	height: 100vh;
+	text-align: center;
+
+	/*for triangle*/
+	border-bottom: 100vh solid #fff;
+	border-left: 120px solid transparent;
+	z-index: 5;
 }
+
+.col-md-5{
+	padding: 0;;
+}
+
+.input{
+	border: none;
+	border-bottom: solid 2px #0a4c85;
+}
+.input:focus {
+	border: none;
+	border-bottom: solid 2px #0a4c85;
+}
+.input:active {
+	border: none;
+	border-bottom: solid 2px #0a4c85;
+}
+
+.submitButton{
+	background-color: #0a4c85;
+	height: 40px;
+	width: 170px;
+	border-radius: 25px;
+	color: #fff;
+}
+
