page1 html done

--- a/src/app/login/page1/page1.component.html
+++ b/src/app/login/page1/page1.component.html
@@ -3,12 +3,81 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="infoContent">
-					something
+					<div class="spacer" style="height: 4em;"></div>
+					<img src="https://randomuser.me/api/portraits/men/29.jpg" alt="" width="100px" height="100px" style="border-radius: 50%; border:solid 2px #bd8b3b; padding: 4px;">
+					<div class="spacer" style="height: 4em;"></div>
+					<p>Dr. Amir Aiman</p>
+					<p>Computer & information System</p>
+					<p>#222222</p>
+					<hr>
+					<p>9.00AM - 12.00 PM</p>
+					<hr>
+					<p>Main Hall</p>
+					<hr>
+					<p>Human Resource Management</p>
+					<p>Artificial Intelligence</p>
+					<p>Cloud Computing</p>
+					<p>Web Application Developemnt</p>
+					<div class="spacer" style="height: 4em;"></div>
+					<button class="logoutButton" (click)="logout()">Logout</button>
 				</div>
 			</div>
 			<div class="col-md-8">
 				<div class="pageContent">
-					information
+					<div class="header">
+						<h2>Examination Attendance System</h2>
+					</div>
+					<div class="spacer" style="height: 4em;"></div>
+					<div class="container">
+						<div class="row tableContent">
+							<div class="col-md-1">#</div>
+							<div class="col-md-5">Name</div>
+							<div class="col-md-1">Exam ID</div>
+							<div class="col-md-1">Status</div>
+							<div class="col-md-3">Remarks</div>
+							<div class="col-md-1"></div>
+						</div>
+						<div class="row content">
+							<div class="col-md-1">1</div>
+							<div class="col-md-5">John Bradley</div>
+							<div class="col-md-1">1699</div>
+							<div class="col-md-1">Attend</div>
+							<div class="col-md-3"></div>
+							<div class="col-md-1"><input type="submit" value="Edit" class="editButtom"></div>
+						</div>
+						<div class="row content">
+							<div class="col-md-1">2</div>
+							<div class="col-md-5">Billy Wallace</div>
+							<div class="col-md-1">6579</div>
+							<div class="col-md-1">Attend</div>
+							<div class="col-md-3">Early Leave</div>
+							<div class="col-md-1"><input type="submit" value="Edit" class="editButtom"></div>
+						</div>
+						<div class="row content">
+							<div class="col-md-1">3</div>
+							<div class="col-md-5">Tiffany Sanchez</div>
+							<div class="col-md-1">5713</div>
+							<div class="col-md-1">Abcent</div>
+							<div class="col-md-3"></div>
+							<div class="col-md-1"><input type="submit" value="Edit" class="editButtom"></div>
+						</div>
+						<div class="row content">
+							<div class="col-md-1">3</div>
+							<div class="col-md-5">Tiffany Sanchez</div>
+							<div class="col-md-1">5713</div>
+							<div class="col-md-1">Abcent</div>
+							<div class="col-md-3"></div>
+							<div class="col-md-1"><input type="submit" value="Edit" class="editButtom"></div>
+						</div>
+						<div class="row content">
+							<div class="col-md-1">3</div>
+							<div class="col-md-5">Tiffany Sanchez</div>
+							<div class="col-md-1">5713</div>
+							<div class="col-md-1">Abcent</div>
+							<div class="col-md-3"></div>
+							<div class="col-md-1"><input type="submit" value="Edit" class="editButtom"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
