--- a/src/app/login/page1/page1.component.css
+++ b/src/app/login/page1/page1.component.css
@@ -6,10 +6,46 @@
 }
 
 .infoContent{
-	background-color: yellow;
+	/*background-color: yellow;*/
 	height: 100vh;
+	text-align: center;
+	border-right: solid 3px rgb(244, 164, 66);
+	background-color: rgba(244, 164, 66, 0.1);
 }
 .pageContent{
-	background-color: green;
+	/*background-color: green;*/
 	height: 100vh;
+}
+.logoutButton{
+	background-color: red;
+	color: #fff;
+	border-radius: 10%;
+}
+.header{
+	padding: 30px;
+}
+
+.tableContent{
+	margin: 10px 10px 30px 10px;
+	border-bottom: solid 3px rgb(244, 164, 66);
+}
+
+.content{
+	margin: 10px 10px 15px 10px;
+	padding: 5px;
+}
+.content:nth-child(odd) {
+	background-color: rgba(244, 164, 66, 0.5);
+}
+
+.editButtom{
+	background-color: rgb(244, 164, 66);
+	color: #fff;
+	height: 30px;
+	width: 70px;
+	border-radius: 10%;
+}
+
+hr{
+	border: solid 1px #000;
 }
